fixed about spacing

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -7,5 +7,5 @@
 }
 
 .about-container {
-  margin: 2em;
+  margin: 2em 5em 5em 3em;
 }
